hphp/test/zend/good/Zend/tests/traits/bugs/abstract-methods01.php.expectf

Fatal error: Class TraitsTest contains abstract method (hello) and must therefore be declared abstract or implement the remaining methods in %s/abstract-methods01.php on line 7
